Added a crude implementation of abstraction and began implementing it into various services, it still needs to be improved and might even need overhaul. But for now it provides a good start