@@ -2,7 +2,7 @@ package com.sparta.pt.chinookwebapp.services;
 
 import com.sparta.pt.chinookwebapp.controllers.api.AlbumController;
 import com.sparta.pt.chinookwebapp.controllers.api.ArtistController;
-import com.sparta.pt.chinookwebapp.controllers.api.HateoasUtils;
+import com.sparta.pt.chinookwebapp.utils.HateoasUtils;
 import com.sparta.pt.chinookwebapp.dtos.AlbumDTO;
 import com.sparta.pt.chinookwebapp.models.Album;
 import com.sparta.pt.chinookwebapp.models.Artist;
@@ -24,12 +24,14 @@ import java.util.Optional;
 @Service
 public class AlbumService extends BaseService<Album, AlbumDTO, AlbumRepository> {
 
+    private final AlbumRepository albumRepository;
     private final ArtistService artistService;
 
     @Autowired
     public AlbumService(AlbumRepository albumRepository, ArtistService artistService, HateoasUtils<AlbumDTO> hateoasUtils, WebMvcLinkBuilderFactory linkBuilderFactory) {
         super(albumRepository, hateoasUtils, linkBuilderFactory);
         this.artistService = artistService;
+        this.albumRepository = albumRepository;
     }
 
     public ResponseEntity<PagedModel<EntityModel<AlbumDTO>>> getAllAlbums(int page, int size) {
@@ -43,6 +45,18 @@ public class AlbumService extends BaseService<Album, AlbumDTO, AlbumRepository> 
                 (dto, linkBuilder) -> linkBuilderFactory.linkTo(ArtistController.class).slash("name").slash(dto.getArtistName()));
     }
 
+    public ResponseEntity<EntityModel<AlbumDTO>> getAlbumByTitle(String title) {
+        Optional<Album> albumOptional = albumRepository.findByTitle(title);
+        if (albumOptional.isPresent()) {
+            Album album = albumOptional.get();
+            AlbumDTO albumDTO = toDto(album);
+            return hateoasUtils.createEntityResponse(albumDTO, AlbumController.class, AlbumDTO::getId,
+                    (dto, linkBuilder) -> linkBuilderFactory.linkTo(ArtistController.class).slash("name").slash(dto.getArtistName()), "Artist");
+        } else {
+            return ResponseEntity.notFound().build();
+        }
+    }
+
     public ResponseEntity<PagedModel<EntityModel<AlbumDTO>>> getAlbumsByArtistName(String artistName, int page, int size) {
         Pageable pageable = PageRequest.of(page, size);
         List<Artist> artists = artistService.getArtistByName(artistName);
@@ -54,26 +68,21 @@ public class AlbumService extends BaseService<Album, AlbumDTO, AlbumRepository> 
         Page<Album> albums = repository.findByArtistIn(artists, pageable);
         Page<AlbumDTO> albumPage = albums.map(this::toDto);
 
-        return hateoasUtils.createPagedResponseWithCustomLinks(albumPage, AlbumController.class, AlbumDTO::getId,
-                (dto, linkBuilder) -> linkBuilderFactory.linkTo(ArtistController.class).slash("name").slash(dto.getArtistName()));
+        return hateoasUtils.createPagedResponseWithCustomLinks(
+                albumPage,
+                AlbumController.class,
+                AlbumDTO::getId,
+                Optional.of((dto, linkBuilder) -> linkBuilderFactory.linkTo(ArtistController.class).slash("name").slash(dto.getArtistName())),
+                "artist"
+        );
     }
 
     public ResponseEntity<EntityModel<AlbumDTO>> createAlbum(AlbumDTO albumDTO) {
         Album album = new Album();
         album.setTitle(albumDTO.getTitle());
         List<Artist> artists = artistService.getArtistByName(albumDTO.getArtistName());
-
         if (!artists.isEmpty()) {
-            album.setArtist(artists.get(0));
-
-            List<Album> allAlbums = repository.findAll();
-            int maxId = allAlbums.stream()
-                    .max(Comparator.comparingInt(Album::getId))
-                    .map(Album::getId)
-                    .orElse(0);
-
-            album.setId(maxId + 1);
-
+            album.setArtist(artists.getFirst());
             return create(album, this::toDto, AlbumController.class, AlbumDTO::getId,
                     (dto, linkBuilder) -> linkBuilderFactory.linkTo(ArtistController.class).slash("name").slash(dto.getArtistName()));
         } else {
@@ -87,7 +96,7 @@ public class AlbumService extends BaseService<Album, AlbumDTO, AlbumRepository> 
         List<Artist> artists = artistService.getArtistByName(albumDTO.getArtistName());
 
         if (!artists.isEmpty()) {
-            albumDetails.setArtist(artists.get(0));
+            albumDetails.setArtist(artists.getFirst());
             return update(id, albumDetails, this::toDto, AlbumController.class, AlbumDTO::getId,
                     (dto, linkBuilder) -> linkBuilderFactory.linkTo(ArtistController.class).slash("name").slash(dto.getArtistName()));
         } else {
@@ -104,7 +113,7 @@ public class AlbumService extends BaseService<Album, AlbumDTO, AlbumRepository> 
                     if (albumDTO.getArtistName() != null) {
                         List<Artist> artists = artistService.getArtistByName(albumDTO.getArtistName());
                         if (!artists.isEmpty()) {
-                            existingAlbum.setArtist(artists.get(0));
+                            existingAlbum.setArtist(artists.getFirst());
                         } else {
                             return Optional.empty();
                         }
